objects/PEPE_Session_Slots__c.object
<CustomObject>
    <fields>
        <fullName>Level_ARCH__c</fullName>
        <description>Level value is used across each session selection and is also mapped for CVENT integartion</description>
        <label>Level</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Advanced</fullName>
                </value>
                <value>
                    <fullName>Foundational</fullName>
                </value>
                <value>
                    <fullName>Intermediate</fullName>
                </value>
                <value>
                    <fullName>Specialist</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Location__c</fullName>
        <description>Location can be either cisco or other</description>
        <label>Location</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Cisco Office</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Marketing_Initiative__c</fullName>
        <description>This will provide the Marketing initiative details.</description>
        <label>Marketing Initiative</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Name_of_the_SMEs__c</fullName>
        <label>***Name of the SMEs</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Note_SS__c</fullName>
        <description>Field to indicate the note for Session Slot fields which marked with * are mandatory before submitting for approval</description>
        <formula>IMAGE("/resource/1431723864000/SS_Approval_Note", "Note")</formula>
        <label>Note</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Notes__c</fullName>
        <description>This will provide the Notes information</description>
        <label>Notes</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Number_of_Attendees__c</fullName>
        <description>This will provide the number of Attendees.</description>
        <label>Number of Attendees</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_of_Registrants__c</fullName>
        <description>This will provide the numbers of registrants.</description>
        <label>Number of Registrants</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Offering_URL_ARCH__c</fullName>
        <description>used for session based offering url in ARCH and may be used for CVENT Integrations</description>
        <label>Offering URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Owner_Email_Id__c</fullName>
        <description>This field indicates the Email Id of Country Registration Owner.</description>
        <label>Owner Email Id</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Owner_Phone__c</fullName>
        <description>This field provides the Phone # of Owner of Country Registration.</description>
        <label>Owner Phone #</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>PEC_Links_Y_N__c</fullName>
        <description>Will provide the PEC Links Info</description>
        <label>SalesConnect Links(Y/N)</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>PIW_Track__c</fullName>
        <label>PIW Track</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>AA-Enterprise Networking</fullName>
                </value>
                <value>
                    <fullName>AA-Data Center</fullName>
                </value>
                <value>
                    <fullName>AA-Collaboration</fullName>
                </value>
                <value>
                    <fullName>AA-Service Provider</fullName>
                </value>
                <value>
                    <fullName>AA-Security</fullName>
                </value>
                <value>
                    <fullName>Programs, Tools and Incentives</fullName>
                </value>
                <value>
                    <fullName>Sales and Soft Skills</fullName>
                </value>
                <value>
                    <fullName>Partner Plus</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>PTP_flag__c</fullName>
        <label>PTP Priority?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Yes</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Panelists__c</fullName>
        <label>Panelists</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Potential_Learning_Partners_ARCH__c</fullName>
        <description>This is used for each session slot anyways.</description>
        <label>Potential Learning Partners</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>2 Mark-IT</fullName>
                </value>
                <value>
                    <fullName>4sight</fullName>
                </value>
                <value>
                    <fullName>5i</fullName>
                </value>
                <value>
                    <fullName>Alef</fullName>
                </value>
                <value>
                    <fullName>AlefNula</fullName>
                </value>
                <value>
                    <fullName>ALS</fullName>
                </value>
                <value>
                    <fullName>Areon</fullName>
                </value>
                <value>
                    <fullName>Bitnett</fullName>
                </value>
                <value>
                    <fullName>Cisco</fullName>
                </value>
                <value>
                    <fullName>Cisco AM</fullName>
                </value>
                <value>
                    <fullName>Cluster Learning</fullName>
                </value>
                <value>
                    <fullName>Edinburgh Business School</fullName>
                </value>
                <value>
                    <fullName>EURO RSCG</fullName>
                </value>
                <value>
                    <fullName>Experteach</fullName>
                </value>
                <value>
                    <fullName>Fast Lane</fullName>
                </value>
                <value>
                    <fullName>Fast Lane Dubai</fullName>
                </value>
                <value>
                    <fullName>Firefly</fullName>
                </value>
                <value>
                    <fullName>Firefly/UpDate</fullName>
                </value>
                <value>
                    <fullName>ForTeam Consult</fullName>
                </value>
                <value>
                    <fullName>Global Knowledge</fullName>
                </value>
                <value>
                    <fullName>Inkom/Knowledge Centre</fullName>
                </value>
                <value>
                    <fullName>Innovise</fullName>
                </value>
                <value>
                    <fullName>Institut za menadzment</fullName>
                </value>
                <value>
                    <fullName>Intuition</fullName>
                </value>
                <value>
                    <fullName>ITLS</fullName>
                </value>
                <value>
                    <fullName>J5</fullName>
                </value>
                <value>
                    <fullName>Knowledge Center Incom/Areon</fullName>
                </value>
                <value>
                    <fullName>Mamentor</fullName>
                </value>
                <value>
                    <fullName>MD Services</fullName>
                </value>
                <value>
                    <fullName>Microtest</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Presenter_Proctor__c</fullName>
        <description>The presenter for this training event</description>
        <inlineHelpText>The presenter for this training event</inlineHelpText>
        <label>Presenter/Proctor</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Primary_Focus__c</fullName>
        <description>Created this field part of May FY15 release</description>
        <label>Primary Focus</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Theater_Super_Regions_Geography__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Operations</fullName>
                </value>
                <value>
                    <fullName>Marketing</fullName>
                </value>
                <value>
                    <fullName>Sales</fullName>
                </value>
                <value>
                    <fullName>Technology</fullName>
                </value>
                <value>
                    <fullName>Multi Focus</fullName>
                </value>
                <value>
                    <fullName>Talent</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Products_and_Services_ARCH__c</fullName>
        <label>Products and Services</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Advanced Services (AS)</fullName>
                </value>
                <value>
                    <fullName>Channel</fullName>
                </value>
                <value>
                    <fullName>Cisco Brand Resale (CBR)</fullName>
                </value>
                <value>
                    <fullName>Cobrand</fullName>
                </value>
                <value>
                    <fullName>Hardware</fullName>
                </value>
                <value>
                    <fullName>Software</fullName>
                </value>
                <value>
                    <fullName>Technical Services (TS)</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Products_and_Services_Selected_ARCH__c</fullName>
        <description>Temporary text buffer field to capture Products and Services result values</description>
        <formula>IF(INCLUDES(Products_and_Services_ARCH__c, "Hardware"),"Hardware;","") 
&amp; 
IF(INCLUDES(Products_and_Services_ARCH__c, "Software"),"Software;","")
&amp;
IF(INCLUDES(Products_and_Services_ARCH__c, "Advanced Services (AS)"), "Advanced Services (AS);", "")
&amp;
IF(INCLUDES(Products_and_Services_ARCH__c, "Cisco Brand Resale (CBR)"), "Cisco Brand Resale (CBR);", "")
&amp;
IF(INCLUDES(Products_and_Services_ARCH__c, "Channel"), "Channel;", "")
&amp;
IF(INCLUDES(Products_and_Services_ARCH__c, "Cobrand"), "Cobrand;", "")
&amp;
IF(INCLUDES(Products_and_Services_ARCH__c, "Technical Services (TS)"), "Technical Services (TS);", "")</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Products and Services Selected</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Projects_or_Campaigns__c</fullName>
        <description>List of Project &amp; Campaign</description>
        <label>Projects or Campaigns</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Theater_Super_Regions_Geography__c</controllingField>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Build &amp; Price</fullName>
                </value>
                <value>
                    <fullName>CCW Renewal</fullName>
                </value>
                <value>
                    <fullName>Cisco Ready</fullName>
                </value>
                <value>
                    <fullName>Country Enablement</fullName>
                </value>
                <value>
                    <fullName>Firejumper</fullName>
                </value>
                <value>
                    <fullName>GPO Partner Acceleration</fullName>
                </value>
                <value>
                    <fullName>Guided Deal Registration</fullName>
                </value>
                <value>
                    <fullName>One Partner View</fullName>
                </value>
                <value>
                    <fullName>Partner Business Management</fullName>
                </value>
                <value>
                    <fullName>Partner Readiness</fullName>
                </value>
                <value>
                    <fullName>Partner Talent</fullName>
                </value>
                <value>
                    <fullName>Software Capabilities</fullName>
                </value>
                <value>
                    <fullName>Technical Assistance Centre</fullName>
                </value>
                <value>
                    <fullName>Wolverine Launch</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Publish_to_Calendar__c</fullName>
        <description>Created this field part of Mar 2015 release</description>
        <inlineHelpText>This value is set to “Yes” when the Training Event is Published with CVENT Flag set to “Yes” and current Session Slot is in Approved status</inlineHelpText>
        <label>Publish to Calendar</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                    <default>true</default>
                    <label>No</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Register_for_WebEx_and_send_confirmation__c</fullName>
        <description>Field created part of May FY15 release</description>
        <label>Register for WebEx and send confirmation</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Automatically_send_registrants_to_WebEx__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Registration_Status__c</fullName>
        <label>Registration Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Open</fullName>
                </value>
                <value>
                    <fullName>Closed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Report_Sent_Y_N__c</fullName>
        <description>User can select wither Yes or No</description>
        <label>Report Sent(Y/N)</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Retrieve_participants_on__c</fullName>
        <description>Field created part of May FY15 release</description>
        <inlineHelpText>This field should be mandatory if Automatically retrieve participants from WebEx selected as Yes</inlineHelpText>
        <label>Retrieve participants on</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Role_ARCH__c</fullName>
        <description>This is used for session based selection in arch event and is also used for CVENT integration mapping.</description>
        <label>Role</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>AM</fullName>
                </value>
                <value>
                    <fullName>SE</fullName>
                </value>
                <value>
                    <fullName>FE</fullName>
                </value>
                <value>
                    <fullName>Architect</fullName>
                </value>
                <value>
                    <fullName>PSS</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Room_Name_ARCH__c</fullName>
        <description>Name of the room where event is hosting. This is specific to LIVE events only.</description>
        <label>Room Name</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SME_Email__c</fullName>
        <description>This email field captures the modifier email id</description>
        <label>SME Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>SS_Full_Name__c</fullName>
        <formula>CreatedBy.FirstName + ' ' +  CreatedBy.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>SS Full Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SS_Owner_Email__c</fullName>
        <formula>CreatedBy.Email</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>SS Owner Email</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SalesConnect_Tag__c</fullName>
        <description>For October Release</description>
        <label>SalesConnect Tag</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SalesConnect_link_PDF__c</fullName>
        <description>Jan 2018 APJ Release</description>
        <label>SalesConnect link (PDF)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SalesConnect_link_Video__c</fullName>
        <description>APj 2018 Jan release</description>
        <label>SalesConnect link (Video)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Secondary_Architecture__c</fullName>
        <description>Part of May 2016 release</description>
        <label>Secondary Architecture</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Theater_Super_Regions_Geography__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Cloud</fullName>
                </value>
                <value>
                    <fullName>Collaboration</fullName>
                </value>
                <value>
                    <fullName>Cross-Architecture</fullName>
                </value>
                <value>
                    <fullName>Data Center / Virtualization</fullName>
                </value>
                <value>
                    <fullName>Enterprise Networking</fullName>
                </value>
                <value>
                    <fullName>Internet of Things (IoT)</fullName>
                </value>
                <value>
                    <fullName>None Specified</fullName>
                </value>
                <value>
                    <fullName>Security</fullName>
                </value>
                <value>
                    <fullName>Service Provider</fullName>
                </value>
                <value>
                    <fullName>Software</fullName>
                </value>
                <value>
                    <fullName>Capital</fullName>
                </value>
                <value>
                    <fullName>Customer Experience</fullName>
                </value>
                <value>
                    <fullName>Software Programmability</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Secondary_Sub_Technology__c</fullName>
        <label>Secondary Sub-Technology</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Secondary_Technology__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Web Security</fullName>
                </value>
                <value>
                    <fullName>Email Security</fullName>
                </value>
                <value>
                    <fullName>Cloud Web Security</fullName>
                </value>
                <value>
                    <fullName>Cisco ASA with FirePower Services</fullName>
                </value>
                <value>
                    <fullName>Cisco Virtual Adaptive Security Appliance (ASAv)</fullName>
                </value>
                <value>
                    <fullName>Cisco Firepower NGIPS Appliance</fullName>
                </value>
                <value>
                    <fullName>Cisco Identity Services Engine (ISE)</fullName>
                </value>
                <value>
                    <fullName>Cisco TrustSec</fullName>
                </value>
                <value>
                    <fullName>Cisco AnyConnect Secure Mobility Client</fullName>
                </value>
                <value>
                    <fullName>Advanced Malware Protection (AMP)</fullName>
                </value>
                <value>
                    <fullName>AMP + ThreatGrid</fullName>
                </value>
                <value>
                    <fullName>ACI Security Solution</fullName>
                </value>
                <value>
                    <fullName>Cyber Threat Defense (CTD)</fullName>
                </value>
                <value>
                    <fullName>Enterprise License Agreement (ELA)</fullName>
                </value>
                <value>
                    <fullName>Network-as-a-Sensor/Network-as-an-Enforcer (Naas/NaaE)</fullName>
                </value>
                <value>
                    <fullName>Secure Data Center</fullName>
                </value>
                <value>
                    <fullName>Application Centric Infrastructure</fullName>
                </value>
                <value>
                    <fullName>Nexus 9000 Series Switches</fullName>
                </value>
                <value>
                    <fullName>Microsoft Applications on Cisco UCS</fullName>
                </value>
                <value>
                    <fullName>Big Data and Analytics</fullName>
                </value>
                <value>
                    <fullName>SAP applications on Cisco UCS</fullName>
                </value>
                <value>
                    <fullName>Desktop Virtualization</fullName>
                </value>
                <value>
                    <fullName>Cisco ONE for Data Center</fullName>
                </value>
                <value>
                    <fullName>UCS Director</fullName>
                </value>
                <value>
                    <fullName>Cisco ONE Enterprise Cloud suite</fullName>
                </value>
                <value>
                    <fullName>Data Center Designs</fullName>
                </value>
                <value>
                    <fullName>Flexpod</fullName>
                </value>
                <value>
                    <fullName>Versastack</fullName>
                </value>
                <value>
                    <fullName>UCS OpenStack</fullName>
                </value>
                <value>
                    <fullName>UCS Mini</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Secondary_Technology__c</fullName>
        <description>Part of May 2016 release</description>
        <label>Secondary Technology</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Secondary_Architecture__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>ACI</fullName>
                </value>
                <value>
                    <fullName>Advanced Threat</fullName>
                </value>
                <value>
                    <fullName>Application Experience as a Service (AXaaS)</fullName>
                </value>
                <value>
                    <fullName>BE6000</fullName>
                </value>
                <value>
                    <fullName>BYOD as a Service (BYODaaS)</fullName>
                </value>
                <value>
                    <fullName>CIN</fullName>
                </value>
                <value>
                    <fullName>Cisco Cloud Services or Cisco SaaS</fullName>
                </value>
                <value>
                    <fullName>Cisco Strategic Partnerships</fullName>
                </value>
                <value>
                    <fullName>Cloud Cell Architecture for SAP HANA (SAP HANA)</fullName>
                </value>
                <value>
                    <fullName>Collab Other</fullName>
                </value>
                <value>
                    <fullName>Compute</fullName>
                </value>
                <value>
                    <fullName>Conferencing</fullName>
                </value>
                <value>
                    <fullName>Connected Safety and Security</fullName>
                </value>
                <value>
                    <fullName>Contact Center</fullName>
                </value>
                <value>
                    <fullName>Contact Center as a Service based on HCS (HCS_CC)</fullName>
                </value>
                <value>
                    <fullName>Web and Email Security</fullName>
                </value>
                <value>
                    <fullName>Converged Infrastructure</fullName>
                </value>
                <value>
                    <fullName>Network Security and Secure DC</fullName>
                </value>
                <value>
                    <fullName>DC Software</fullName>
                </value>
                <value>
                    <fullName>DC Switching</fullName>
                </value>
                <value>
                    <fullName>Desktop as a Service (DaaS)</fullName>
                </value>
                <value>
                    <fullName>Desktop Virtualization</fullName>
                </value>
                <value>
                    <fullName>Disaster Recovery as a Service (DRaaS)</fullName>
                </value>
                <value>
                    <fullName>Foundation for Software as a Service (FnSaaS)</fullName>
                </value>
                <value>
                    <fullName>Hosted Security as a Service (HSS)</fullName>
                </value>
                <value>
                    <fullName>Hybrid Cloud (Intercloud Fabric)</fullName>
                </value>
                <value>
                    <fullName>Infrastructure as a Service (IaaS)</fullName>
                </value>
                <value>
                    <fullName>IoT-AS=Advanced Services</fullName>
                </value>
                <value>
                    <fullName>IoT-CCS=Cisco Consulting Services</fullName>
                </value>
                <value>
                    <fullName>IoT-CIE=Connected Industries and Energy</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Session_Capacity__c</fullName>
        <label>Session Capacity</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Session_Category__c</fullName>
        <label>Session Category</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Session_Description__c</fullName>
        <label>Session Description</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Session_Group__c</fullName>
        <label>Session Group</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Session_ID__c</fullName>
        <formula>Id</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Session ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Session_Type__c</fullName>
        <label>Session Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Included Session</fullName>
                </value>
                <value>
                    <fullName>Optional Session</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Sign_off_Notes__c</fullName>
        <description>This field will provide the Note information related to Sign off.</description>
        <label>Sign off Notes</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Speakers__c</fullName>
        <label>***Speakers</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Start_Date_Time__c</fullName>
        <description>Date of the training session begins</description>
        <label>Start Date Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <description>This status will provide the status of the Session Slot</description>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Created</fullName>
                    <default>true</default>
                    <label>Created</label>
                </value>
                <value>
                    <fullName>Submitted</fullName>
                </value>
                <value>
                    <fullName>Approved</fullName>
                </value>
                <value>
                    <fullName>Rejected</fullName>
                </value>
                <value>
                    <fullName>Delivered</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
</CustomObject>